# binary-slicer

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
.ritual/: project.json
crates/cli/: Cargo.toml  README.md
crates/cli/src/: lib.rs  main.rs
crates/cli/src/commands/: backends.rs  binaries.rs  mod.rs  project.rs  rituals.rs  setup.rs  slices.rs  status.rs  util.rs
crates/cli/tests/: backends_list.rs  cli_commands.rs  command_analysis.rs  command_branches.rs  command_errors.rs  command_units.rs  helpers.rs  init_and_add_binary.rs  setup_backend.rs  slice_reports_from_db.rs  util_extra.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/core/src/analysis/: mod.rs
crates/core/src/backends/: mod.rs
crates/core/src/db/: config.rs  context.rs  layout.rs  mod.rs  models.rs  project_db.rs  util.rs
crates/core/src/model/: mod.rs
crates/core/src/rituals/: mod.rs
crates/core/src/services/: analysis.rs
crates/core/src/services/backends/: capstone.rs  ghidra.rs  mod.rs  rizin.rs
crates/core/tests/: analysis_service.rs  capstone_backend.rs  capstone_fixtures.rs  core_basic.rs  db_additional.rs  db_analysis.rs  db_error_paths.rs  db_integration.rs  db_layout_and_status.rs  db_layout_helpers.rs  db_runs.rs  ghidra_backend.rs  project_context.rs  rizin_backend.rs
demo/: README.md
demo/.ritual/: project.db  project.json
demo/docs/slices/: DemoSlice.md  Telemetry.md
demo/outputs/binaries/CQ2/DemoRun/: graph.dot  report.json  run_metadata.json  spec.yaml
demo/outputs/binaries/DemoBin/TelemetryRun/: report.json  spec.yaml
demo/reports/: DemoSlice.json  Telemetry.json
demo/rituals/: demo.yaml  telemetry.yaml
docs/: 0001-initial-architecture.md  README.md
docs/adr/: 0001-initial-architecture.md
scripts/: ci-local.ps1  ci-local.sh
