[workspace]
members = ["crates/core", "crates/cli"]

resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
repository = ""
description = "Slice-oriented reverse-engineering assistant for native game/engine binaries."

[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "1.0.69"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"

clap = { version = "4.5.53", features = ["derive"] }

rusqlite = { version = "0.32.1", features = ["bundled"] }

tempfile = "3.23.0"
assert_cmd = "2.1.1"
predicates = "3.1.3"

sha2 = "0.10.8"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
