[package]
name = "binary-slicer"
edition = "2021"
version = "0.1.0"
description = "CLI frontend for ritual-core."
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
ritual-core = { path = "../core" }
sha2 = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }
predicates = { workspace = true }
