[package]
name = "ritual-core"
edition = "2021"
version = "0.1.0"
description = "Core library for slice-oriented reverse-engineering of native binaries."
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
capstone = { version = "0.11", optional = true }
goblin = { version = "0.8", optional = true }


[dev-dependencies]
tempfile = { workspace = true }
object = { version = "0.36", features = ["write_core"] }

[features]
default = ["capstone-backend"]
capstone-backend = ["capstone", "goblin"]
rizin-backend = []
ghidra-backend = []
